--- a/forexsys/templates/base.html
+++ b/forexsys/templates/base.html
@@ -20,6 +20,12 @@
                     </p>
                     <p>
                         <a href="/">Home</a> |
+                        <a href="/tradesys/TradePlan">我的计划</a> |
+                        <a href="">市场整体分析</a> |
+                        <a href="/">各货币分化分析</a> |
+                        <a href="/">货币初选</a> |
+                        <a href="/">选定币种趋势分析</a> |
+                        <a href="/">选定币种交易分析</a> |
                         <a href="{% url accounts.views.profile %}">Profile</a>
                     </p>
                     {% else %}
