--- a/forexsys/templates/tradesys/TradePlanSumView.html
+++ b/forexsys/templates/tradesys/TradePlanSumView.html
@@ -2,16 +2,20 @@
 {% block content %}
 <form action="" method="post" class="TradeFrame">
     {% csrf_token %}
-    <ol>
-    <li><label>交易级别:</label><b></b></li>
-    {{ form.as_ul }}
 
+    <label>目前已有的交易列表:</label><b></b>
+    <ol>
     {% for tradeplan in object_list %}
-	{{ tradeplan.symbol_name }} | {{ tradeplan.trade_type }} | {{ tradeplan.tradeplan.tradeframe }} | {{ tradeplan.tradeplan.begin_time }}
-    {% endfor %}
-    <li id="next">
-        <button type="submit">Create</button>
+    <li>
+	{{ tradeplan.symbol_name }} |
+        {{ tradeplan.trade_type }}  |
+        {{ tradeplan.tradeplan.tradeframe }} |
+        {{ tradeplan.tradeplan.begin_time }}
     </li>
+    {% endfor %}
+    <!-- <li id="next"> -->
+        <!-- <button type="submit">Create</button> -->
+    <!-- </li> -->
     </ol>
 </form>
 {% endblock %}
