MarketOverView is going

--- a/forexsys/templates/base.html
+++ b/forexsys/templates/base.html
@@ -20,7 +20,7 @@
                     </p>
                     <p>
                         <a href="/">Home</a> |
-                        <a href="/tradesys/TradePlan">我的计划</a> |
+                        <a href="/tradesys/MyTradePlan">我的计划</a> |
                         <a href="">市场整体分析</a> |
                         <a href="/">各货币分化分析</a> |
                         <a href="/">货币初选</a> |
