--- a/forexsys/templates/tradesys/FirstSelectView.html
+++ b/forexsys/templates/tradesys/FirstSelectView.html
@@ -1,11 +1,17 @@
 {% extends "base.html" %}
 {% block content %}
+<li>{{ tradeframe }} </li>
+<li>{{ tradetype }} </li>
+
 <form action="" method="POST" class="TradeFrame">
     {% csrf_token %}
-    {{ strength_list }}
     <label>强弱筛选:</label><b></b>
+    {{ symbol_strength }}
+
     <label>规范性筛选:</label><b></b>
-    <label>不可交易原则:</label><b></b>
+    
+    <label>不可交易原则筛选:</label><b></b>
+    {{ symbol_excluded }}
     <label>结论(选择哪些货币作为日内交易重点):</label><b></b>
 
         <button id="selected" type="submit">选定币种趋势分析</button>
