--- a/forexsys/templates/tradesys/MyTradePlanView.html
+++ b/forexsys/templates/tradesys/MyTradePlanView.html
@@ -1,18 +1,18 @@
 {% extends "base.html" %}
 {% block content %}
-<form action="/tradesys/MyTradePlan/market_over_view/" method="POST" class="TradeFrame">
+<form action="" method="POST" class="MyTradePlan">
     {% csrf_token %}
     {{ tradeinfo }}
     <label>目前已有的交易列表:</label><b></b>
     <ol>
-    {% for tradeplan in object_list %}
-    <li>
-	{{ tradeplan.symbol_name }} |
-        {{ tradeplan.trade_type }}  |
-        {{ tradeplan.tradeplan.tradeframe }} |
-        {{ tradeplan.tradeplan.begin_time }}
-    </li>
-    {% endfor %}
+    <!-- {% for tradeplan in object_list %} -->
+    <!-- <li> -->
+	<!-- {{ tradeplan.symbol_name }} | -->
+        <!-- {{ tradeplan.trade_type }}  | -->
+        <!-- {{ tradeplan.tradeplan.tradeframe }} | -->
+        <!-- {{ tradeplan.tradeplan.begin_time }} -->
+    <!-- </li> -->
+    <!-- {% endfor %} -->
     </ol>
 
         <button id="create_plan" type="submit">创建交易计划</button>
