--- a/forexsys/templates/tradesys/FirstSelectView.html
+++ b/forexsys/templates/tradesys/FirstSelectView.html
@@ -3,15 +3,9 @@
 <li>{{ tradeframe }} </li>
 <li>{{ tradetype }} </li>
 
-<form action="/tradesys/MyTradePlan/selected_view/" method="POST" class="TradeFrame">
+<form action="" method="POST" class="FirstSelectView">
     {% csrf_token %}
-    <label>强弱筛选:</label><b></b>
-    {{ symbol_strength }}
-
-    <label>规范性筛选:</label><b></b>
-    
-    <label>不可交易原则筛选:</label><b></b>
-    {{ symbol_excluded }}
+    {{ first_select_view }}
     <label>结论(选择哪些货币作为日内交易重点):</label><b></b>
 
         <button id="selected" type="submit">选定币种趋势分析</button>
