--- a/forexsys/templates/tradesys/MarketOverView.html
+++ b/forexsys/templates/tradesys/MarketOverView.html
@@ -1,12 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
-<li>{{ tradeframe }} </li>
-<li>{{ tradetype }} </li>
 <form action="" method="POST" class="MarketOverView">
     {% csrf_token %}
-    {{ market_overview }}
-    {{ market_overview_result }}
-    {{ plan_result }}
+    tradetype:{{ tradetype }}
+    {{ md_formset }}
+    {{ mov_form }}
+    {{ plan_res_result }}
     </ol>
         <button id="save_and_next" type="submit">保存并下一步</button>
 </form>
