--- a/forexsys/templates/base.html
+++ b/forexsys/templates/base.html
@@ -19,13 +19,12 @@
                         Welcome {{ user.username }} [ <a href="{% url accounts.views.logout %}">{% trans "sign out" %}</a> ]
                     </p>
                     <p>
-                        <a href="/">Home</a> |
                         <a href="/tradesys/MyTradePlan">我的计划</a> |
-                        <a href="">市场整体分析</a> |
-                        <a href="/">各货币分化分析</a> |
-                        <a href="/">货币初选</a> |
-                        <a href="/">选定币种趋势分析</a> |
-                        <a href="/">选定币种交易分析</a> |
+                        <a href="/tradesys/MyTradePlan/market_over_view/">市场整体分析</a> |
+                        <a href="/tradesys/MyTradePlan/market_diff_view/">各货币分化分析</a> |
+                        <a href="/tradesys/MyTradePlan/first_select_view/">货币初选</a> |
+                        <a href="/tradesys/MyTradePlan/analysis_selected_view/">选定币种趋势分析</a> |
+                        <a href="/tradesys/MyTradePlan/tradeplan_action_view/">行动计划制定</a> |
                         <a href="{% url accounts.views.profile %}">Profile</a>
                     </p>
                     {% else %}
