tp_id_proc added for check & set tp_id

--- a/forexsys/templates/tradesys/MarketDiffView.html
+++ b/forexsys/templates/tradesys/MarketDiffView.html
@@ -14,7 +14,7 @@
     {{ mov_b_form }}
     {{ mov_s_form }}
     </ol>
-        <button id="save_and_next" type="submit">保存并下一步</button>
+        <button id="save_and_next" type="submit">下一步(货币初选)</button>
 </form>
 
 {% endblock %}
