--- a/forexsys/templates/tradesys/MarketOverView.html
+++ b/forexsys/templates/tradesys/MarketOverView.html
@@ -47,7 +47,7 @@
     </li>
 
     </ol>
-        <button id="save_and_next" type="submit">保存并下一步</button>
+        <button id="save_and_next" type="submit">下一步(各货币分化分析)</button>
 </form>
 
 {% endblock %}
