--- a/forexsys/templates/tradesys/MarketOverView.html
+++ b/forexsys/templates/tradesys/MarketOverView.html
@@ -42,14 +42,14 @@
       </tr>
 
       <tr>
-          <th>结论</th>
+          <th><span class="required">结论</span></th>
           <td colspan=6>
               {{ mov_form.market_result }}
           </td>
       </tr>
 
       <tr>
-          <th>操作</th>
+          <th><span class="required">操作</span></th>
           <td>{{ plan_res_result.plan_result }} {{ tradetype }}</td>
       </tr>
 
